Better exit button, UI overlapping fix

--- a/src/app/gameSceneStyle.css
+++ b/src/app/gameSceneStyle.css
@@ -48,7 +48,7 @@
     text-align:center;
 }
 
-.restartButton, .settingsButton, .startButton {
+.restartButton, .settingsButton, .startButton, .exitButton {
     border:1px solid black;
     border-radius: 10px;
     background-color:white;
@@ -60,7 +60,7 @@
     font-size: 16px;
 }
 
-.restartButton:hover, .settingsButton:hover, .startButton:hover {
+.restartButton:hover, .settingsButton:hover, .startButton:hover, .exitButton:hover {
     filter:brightness(90%);
 }
 
