--- a/src/app/livesStyle.css
+++ b/src/app/livesStyle.css
@@ -13,6 +13,6 @@
 
 .Lives {
     top: -10px;
-    left: 0px;
+    left: 100px;
     position:fixed;
 }
